* Make backend-collect-timeout working even while waiting on command output
* Support ASM filesystems on Oracle Grid
* Introduce getDeviceId() API on Inventory class so it returns task deviceid if set
  or set a new deviceid (aka agentid or machineid) in case of remote inventory
* Fix #161: Support retrieving License software via WMI, including Office 2016

netdiscovery/netinventory:
* Bump NetDiscovery & NetInventory task version to 2.5
* Added section support for MODEMS, SIMCARDS & FIRMWARES
* Added new detection algorithm based on exposed device supported MIB (sysORID list)
  and/or sysObjectID
* Added support for HP iLO cards
* Added support for Digi devices with enhanced MODEMS, SIMCARDS & FIRMWARES support
* Updated sysobject.ids with a lot of new devices support
* Keep first MAC address found while discovering
* Try first to select MAC address from SNMP session during SNMP device scan

deploy:
* Bump Deploy task version to 2.5
* ddurieux fixed a regression introduced in 2.3.18 preventing to re-use known
  good peer to download file parts.

esx:
* Bump ESX task version to 2.3
* Removed no more needed createFakeDeviceid() API

injector:
* Support --no-ssl-check option to avoid checking server SSL certificate

2.3.21 Mon, 31 Jul 2017
core:
* Service/daemon refactoring:
 * Move all daemon method to dedicated FusionInventory::Agent::Daemon package
 * Win32 service now based on private FusionInventory::Agent::Service inheriting
   from FusionInventory::Agent::Daemon
 * support configuration reloading on SIGHUP signal (unix)
 * support pausing service under win32
 * support run now on SIGUSR1 signal (unix)
 * and a lot of daemon/service optimizations and enhancements
 * daemon process renamed to provider derivated name under unix-like systems with
   tag if defined. Example: "fusioniventory-agent (prod)"
* Report http proxy error to help debug communication problems: #324
* Prevent setup.pm indexing in CPAN as requested by CPAN admins
* Other fixed issues: #321
